// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrameRegisters should render registers 1`] = `
<div>
  <div
    class="css-1n6wo8c-Wrapper eez4mmo5"
  >
    <div
      class="css-108zstf-Title eez4mmo4"
    >
      Registers
    </div>
    <div
      class="eez4mmo1 css-1bqs00j-Wrapper-StyledClippedBox easm7v12"
    >
      <div
        class="css-1af71uq-Registers eez4mmo3"
      >
        <div
          class="css-19y2rzg-Register eez4mmo2"
        >
          r10
          <pre
            class="css-qkjpyl-InlinePre ef4fy0g1"
          >
            <span>
              0x00007fff9300bf70
            </span>
            <span
              aria-describedby="tooltip-eesvzwpvlg"
              class="ef4fy0g2 css-11ci3gs-Container-StyledTooltip e1lk5gpt0"
            >
              <svg
                aria-label="Toggle register value format"
                class="ef4fy0g0 css-640j9s-IconSliders-Toggle"
                fill="currentColor"
                height="12px"
                viewBox="0 0 16 16"
                width="12px"
              >
                <path
                  d="M4.33,14a2.86,2.86,0,1,1,2.86-2.85A2.86,2.86,0,0,1,4.33,14Zm0-4.21a1.36,1.36,0,1,0,1.36,1.36A1.35,1.35,0,0,0,4.33,9.75Z"
                />
                <path
                  d="M11.71,7.75a2.86,2.86,0,1,1,2.85-2.86A2.86,2.86,0,0,1,11.71,7.75Zm0-4.21a1.36,1.36,0,1,0,1.35,1.35A1.36,1.36,0,0,0,11.71,3.54Z"
                />
                <path
                  d="M15.19,11.86H6.44a.75.75,0,0,1,0-1.5h8.75a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M2.23,11.86H.81a.75.75,0,0,1,0-1.5H2.23a.75.75,0,1,1,0,1.5Z"
                />
                <path
                  d="M15.19,5.64H13.81a.75.75,0,0,1,0-1.5h1.38a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M9.6,5.64H.81a.75.75,0,1,1,0-1.5H9.6a.75.75,0,0,1,0,1.5Z"
                />
              </svg>
            </span>
          </pre>
        </div>
        <div
          class="css-19y2rzg-Register eez4mmo2"
        >
          r11
          <pre
            class="css-qkjpyl-InlinePre ef4fy0g1"
          >
            <span>
              0x0000000000000000
            </span>
            <span
              aria-describedby="tooltip-ul2rz4pfvx"
              class="ef4fy0g2 css-11ci3gs-Container-StyledTooltip e1lk5gpt0"
            >
              <svg
                aria-label="Toggle register value format"
                class="ef4fy0g0 css-640j9s-IconSliders-Toggle"
                fill="currentColor"
                height="12px"
                viewBox="0 0 16 16"
                width="12px"
              >
                <path
                  d="M4.33,14a2.86,2.86,0,1,1,2.86-2.85A2.86,2.86,0,0,1,4.33,14Zm0-4.21a1.36,1.36,0,1,0,1.36,1.36A1.35,1.35,0,0,0,4.33,9.75Z"
                />
                <path
                  d="M11.71,7.75a2.86,2.86,0,1,1,2.85-2.86A2.86,2.86,0,0,1,11.71,7.75Zm0-4.21a1.36,1.36,0,1,0,1.35,1.35A1.36,1.36,0,0,0,11.71,3.54Z"
                />
                <path
                  d="M15.19,11.86H6.44a.75.75,0,0,1,0-1.5h8.75a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M2.23,11.86H.81a.75.75,0,0,1,0-1.5H2.23a.75.75,0,1,1,0,1.5Z"
                />
                <path
                  d="M15.19,5.64H13.81a.75.75,0,0,1,0-1.5h1.38a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M9.6,5.64H.81a.75.75,0,1,1,0-1.5H9.6a.75.75,0,0,1,0,1.5Z"
                />
              </svg>
            </span>
          </pre>
        </div>
        <div
          class="css-19y2rzg-Register eez4mmo2"
        >
          r12
          <pre
            class="css-qkjpyl-InlinePre ef4fy0g1"
          >
            <span>
              0x0000000000000000
            </span>
            <span
              aria-describedby="tooltip-z2dt47h983"
              class="ef4fy0g2 css-11ci3gs-Container-StyledTooltip e1lk5gpt0"
            >
              <svg
                aria-label="Toggle register value format"
                class="ef4fy0g0 css-640j9s-IconSliders-Toggle"
                fill="currentColor"
                height="12px"
                viewBox="0 0 16 16"
                width="12px"
              >
                <path
                  d="M4.33,14a2.86,2.86,0,1,1,2.86-2.85A2.86,2.86,0,0,1,4.33,14Zm0-4.21a1.36,1.36,0,1,0,1.36,1.36A1.35,1.35,0,0,0,4.33,9.75Z"
                />
                <path
                  d="M11.71,7.75a2.86,2.86,0,1,1,2.85-2.86A2.86,2.86,0,0,1,11.71,7.75Zm0-4.21a1.36,1.36,0,1,0,1.35,1.35A1.36,1.36,0,0,0,11.71,3.54Z"
                />
                <path
                  d="M15.19,11.86H6.44a.75.75,0,0,1,0-1.5h8.75a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M2.23,11.86H.81a.75.75,0,0,1,0-1.5H2.23a.75.75,0,1,1,0,1.5Z"
                />
                <path
                  d="M15.19,5.64H13.81a.75.75,0,0,1,0-1.5h1.38a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M9.6,5.64H.81a.75.75,0,1,1,0-1.5H9.6a.75.75,0,0,1,0,1.5Z"
                />
              </svg>
            </span>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrameRegisters should skip registers without a value 1`] = `
<div>
  <div
    class="css-1n6wo8c-Wrapper eez4mmo5"
  >
    <div
      class="css-108zstf-Title eez4mmo4"
    >
      Registers
    </div>
    <div
      class="eez4mmo1 css-1bqs00j-Wrapper-StyledClippedBox easm7v12"
    >
      <div
        class="css-1af71uq-Registers eez4mmo3"
      >
        <div
          class="css-19y2rzg-Register eez4mmo2"
        >
          r10
          <pre
            class="css-qkjpyl-InlinePre ef4fy0g1"
          >
            <span>
              0x00007fff9300bf70
            </span>
            <span
              aria-describedby="tooltip-be7i3nrrq8"
              class="ef4fy0g2 css-11ci3gs-Container-StyledTooltip e1lk5gpt0"
            >
              <svg
                aria-label="Toggle register value format"
                class="ef4fy0g0 css-640j9s-IconSliders-Toggle"
                fill="currentColor"
                height="12px"
                viewBox="0 0 16 16"
                width="12px"
              >
                <path
                  d="M4.33,14a2.86,2.86,0,1,1,2.86-2.85A2.86,2.86,0,0,1,4.33,14Zm0-4.21a1.36,1.36,0,1,0,1.36,1.36A1.35,1.35,0,0,0,4.33,9.75Z"
                />
                <path
                  d="M11.71,7.75a2.86,2.86,0,1,1,2.85-2.86A2.86,2.86,0,0,1,11.71,7.75Zm0-4.21a1.36,1.36,0,1,0,1.35,1.35A1.36,1.36,0,0,0,11.71,3.54Z"
                />
                <path
                  d="M15.19,11.86H6.44a.75.75,0,0,1,0-1.5h8.75a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M2.23,11.86H.81a.75.75,0,0,1,0-1.5H2.23a.75.75,0,1,1,0,1.5Z"
                />
                <path
                  d="M15.19,5.64H13.81a.75.75,0,0,1,0-1.5h1.38a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M9.6,5.64H.81a.75.75,0,1,1,0-1.5H9.6a.75.75,0,0,1,0,1.5Z"
                />
              </svg>
            </span>
          </pre>
        </div>
        <div
          class="css-19y2rzg-Register eez4mmo2"
        >
          r12
          <pre
            class="css-qkjpyl-InlinePre ef4fy0g1"
          >
            <span>
              0x0000000000000000
            </span>
            <span
              aria-describedby="tooltip-x1kg2s7pka"
              class="ef4fy0g2 css-11ci3gs-Container-StyledTooltip e1lk5gpt0"
            >
              <svg
                aria-label="Toggle register value format"
                class="ef4fy0g0 css-640j9s-IconSliders-Toggle"
                fill="currentColor"
                height="12px"
                viewBox="0 0 16 16"
                width="12px"
              >
                <path
                  d="M4.33,14a2.86,2.86,0,1,1,2.86-2.85A2.86,2.86,0,0,1,4.33,14Zm0-4.21a1.36,1.36,0,1,0,1.36,1.36A1.35,1.35,0,0,0,4.33,9.75Z"
                />
                <path
                  d="M11.71,7.75a2.86,2.86,0,1,1,2.85-2.86A2.86,2.86,0,0,1,11.71,7.75Zm0-4.21a1.36,1.36,0,1,0,1.35,1.35A1.36,1.36,0,0,0,11.71,3.54Z"
                />
                <path
                  d="M15.19,11.86H6.44a.75.75,0,0,1,0-1.5h8.75a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M2.23,11.86H.81a.75.75,0,0,1,0-1.5H2.23a.75.75,0,1,1,0,1.5Z"
                />
                <path
                  d="M15.19,5.64H13.81a.75.75,0,0,1,0-1.5h1.38a.75.75,0,0,1,0,1.5Z"
                />
                <path
                  d="M9.6,5.64H.81a.75.75,0,1,1,0-1.5H9.6a.75.75,0,0,1,0,1.5Z"
                />
              </svg>
            </span>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
